# opentracing-c

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
bindings/lua/: opentracing_lua.c  opentracing_lua.h
scripts/: build.sh
src/opentracing-c/: common.h  destructible.h  propagation.h  span.h  tracer.c  tracer.h  value.h
test/: tracer_test.c
